--- a/Teaca-Personal-Portfolio/assets/css/style.css
+++ b/Teaca-Personal-Portfolio/assets/css/style.css
@@ -1,12 +1,12 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 /* apply styles to <body> */
 body {
-    background-color: #d9dcd6;
-    font-family: 'Helvetica', 'Arial', sans-serif;
+  background-color: #d9dcd6;
+  font-family: 'Helvetica', 'Arial', sans-serif;
 }
 /* Header Style Start */
 header {
@@ -17,35 +17,43 @@ header {
   justify-content: space-between;
 }
 
-
 header h1 {
-    font-size: 48px;
+  font-size: 38px;
     Margin: 0;
     font-weight: bold;
     color: white;
     background-color: lightblue;
     padding: 1%;
-    
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 header a {
     color: #ffffff;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 header nav ul  {
-    display: flex;
-    flex-wrap:wrap;
-    justify-content: space-between;
-    align-items:center;
-    list-style: none;
+  display: flex;
+  flex-wrap:wrap;
+  justify-content: space-between;
+  align-items:center;
+  list-style: none;
 }
+header nav ul li {
+	padding: 10px 0px;
+    border-bottom: solid #a2cacc 4px;
+    margin-right: 30px;
+}
+
 header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    border-bottom: solid #a2cacc 4px;
+    margin-right: 30px;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   
-  section {
+section {
     padding: 60px;
     
   }
@@ -62,88 +70,153 @@ header nav {
     background-size: cover;
     background-position: center;
     flex-wrap: wrap; 
-    align-content: flex-end;  
+    align-items: flex-start;  
   }
   .hero-cta {
     width: 100%;
     text-align: right;
-    margin: 10%;
-    flex-wrap:wrap;
+    margin: 20% 10% 0% 10%;
+    flex-wrap: wrap;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
-  .hero-cta h3 {
+  .quote {
     font-size: 22px;
     font-weight: bold;
     color: white;
-    background-color: gray;
     padding: 1%;
+    float: right;
+    flex: wrap;
+    background-color: #add8e6;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   
-/* apply styles to Content */
-section {
-padding: 60px;
+
+/* Start Container */
+.container {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
-.about {
-    width: 100%;
-    margin: 0 auto;
+.info {
     display: flex;
     flex-wrap: wrap;
-     justify-content: space-between;
-  }
-  .section-title {
-    font-size: 55px;
-    color:gray;
-    border-right: 3px solid;
-
+    width: 100%;
+    margin: 0 auto;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    justify-content: space-between;
 }
-.about h2 {
-    font-size: 55px;
+.title {
+    font-size: 48px;
+    flex-wrap: wrap;
     text-align: right;
-    align-self:flex-start;
+    color:gray;
     padding-right: 1%;
     padding-bottom: 12%;
-    display: inline-block;
-    
+    font-size: 45px;   
+   }
+
+.info h2 {
+  font-size: 55px;
+  text-align: right;
+  align-self:flex-start;
+  padding-right: 1%;
+  display: inline-block;
+width: 18%;
 }
-.about p {
+.title-border {
+  float: left;
+	width: 80%;
+	border-left: 3px #808080 solid;
+  padding-left: 3%;   
+  }
+
+  .info p {
     line-height: 1.7;
     color: gray;
     font-size: 18px;
     width: 90%;
     margin: 0 auto;
     padding-bottom: 2%;
+    text-align: left;
 }
 
-.primary-border {
-    border-color:gray;
+/*Grid*/
+.grid-container {
+  display: grid;
+    grid-template-columns: repeat(3, 210px);
+    grid-template-rows: repeat(3, 120px);
+    grid-gap: 10px;
+    flex: "flex-shrink";
+    margin: 3.5%;
+    line-height: 1.5;
+  place-items: 'align items' 'justify items';
+}
 
-    
+.grid-image-1 {
+  grid-column: 1 / 3;
+    grid-row: 1 / 3;
+}
+.igrid-image-2 {
+  grid-column: 3 / 3;
+  grid-row: 1 / 1;
+}
+
+.grid-image-3 {
+  grid-column: 3 / 3;
+  grid-row: 2 / 1;
   }
- .flex-row {
-     display: flex;
- } 
 
+.gallery-images {
+  opacity: 0.5;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: 2px;
+}
+img:hover {
+  opacity: 1.0;
+}
 
-/* work grid images */
- .horiseon {
-     background-image: url('../images/digital-marketing-meeting.jpg/');
-     background-position: 10%;
-   background-position: center;
-  display: flex;
-  justify-content: left;
-  flex-wrap: wrap;
-  align-items:flex-start;
- }
+.grid-mage a[href] {
+  position: relative;
+}
 
- .run-buddy {
-     background-image: url('../images/hero-bg.jpg');
- }
+.label h3 {
+ position: relative;
+bottom: 8px;
+ text-align: center;
+background-color: #ADD8e6;
+color: #ffffff;
+font-weight: lighter;
+}
 
- .led-wall {
-     background-image: url('../images/ledwall.jpg');
- }
+.label h3 span {
+font-size: smaller;
+}
 
+/* Contact Me */
 
+.contact-info{
+	margin: 0 auto;
+  text-align: center;
+	}
+.contact-info ul{
+	list-style: none;
+	text-align: center;
+	padding: 4% 0;
+	}
+.contact-info ul li{
+display: inline;
+border-bottom: 3px solid #808080;
+padding: 1% 0%;
+margin: 1%;
+	}
+.contact-info ul li a{
+	text-decoration: none;
+	font-size: 24px;
+color: #808080;
+	}
 
 
 /* footer styles */
@@ -158,6 +231,9 @@ footer {
 
 footer h2 {
     font-size: 20px;
+	text-align:center;
+	width:100%;
+	color:#808080;
     
     
 }
@@ -167,3 +243,130 @@ footer div {
     text-align: center;
   }    
 
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+    header {
+      /* this will be applied on any screen smaller than 980px */
+      padding-bottom: 0;
+   justify-content: center;
+   position: relative
+  }
+  header h1 {
+    width: 100%;
+    text-align: center;
+  }
+  header nav ul {
+    margin-top: 20px;
+  width: 100%;
+  justify-content: center;
+}
+  header nav ul li a {
+    font-size: 20px;
+  }
+  footer h2, footer div{
+    text-align: center;
+  width: 100%;
+  }
+
+.hero {
+  width: 100%;
+}
+  .hero-cta {
+    text-align: center;
+  }
+  
+  .title {
+    flex: 1 100%;
+  }
+
+  .title h2 {
+    width: 70%;
+  }
+  
+  .grid-container {
+    flex: 1 100%;
+  }
+  .gallery-images {
+    width: 50%;
+  }
+  .contact-me {
+    flex: 1 100%;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .info{
+      padding: 30px 15px;
+    }
+  
+    .title {
+      flex: 70%;
+      text-align: left;
+    }
+  
+    .title-border {
+      flex: 2 100%;
+      text-align: center;
+      justify-content: center;
+    }
+  
+    .grid-container {
+      flex: 0 32%;
+      margin-right: 0;
+      margin-top: 15px;
+      margin-bottom: 15px;
+    }
+  
+    .contact-me {
+      flex: 100%;
+    }
+  .h2 title {
+    flex: 70%;
+    text-align: right; 
+  }
+  
+  @media screen and (max-width: 575px) {
+    .hero  {
+      width: 95%;
+    }
+    .header h1 {
+      width: 95%;
+    }
+    .container {
+      width: 80%;
+    }
+  
+    .label {
+        width: 80%;
+    }
+  
+    .contact-info {
+      text-align: center;
+      flex: 0 100%;
+    } 
+    .contact-form {
+      order: 3;
+    }
+
+    .footer {
+        width: 80%;
+        font-size: smaller;
+    }
+    @media screen and (max-width: 768px) {
+  
+    .grid-container {
+        grid-template-columns: 1fr 1fr;
+    }
+    
+    .gallery-images {
+        transform: none;
+        writing-mode: unset;
+        grid-column: 1 / -1;
+        grid-row: -1;
+    }
+    .title  {
+      width: 60%;
+    }
+    .grid-image {
+        grid-column: 1 / -1;
+    }
