--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -313,8 +313,8 @@ footer div {
     .grid-container {
       flex: 0 32%;
       margin-right: 0;
-      margin-top: 15px;
-      margin-bottom: 15px;
+      margin-top: 20px;
+      margin-bottom: 20px;
     }
   
     .contact-me {
@@ -355,18 +355,14 @@ footer div {
     @media screen and (max-width: 768px) {
   
     .grid-container {
-        grid-template-columns: 1fr 1fr;
-    }
-    
+     transform: scale(0.5) translate(-40%, -40%) ;
+      flex-wrap: wrap;
+	}
     .gallery-images {
-        transform: none;
-        writing-mode: unset;
-        grid-column: 1 / -1;
-        grid-row: -1;
+        flex-wrap: wrap;
+        writing-mode: unset;   
     }
     .title  {
       width: 60%;
     }
-    .grid-image {
-        grid-column: 1 / -1;
-    }
+ 
